Update package.json with new dependencies and scripts

--- a/package.json
+++ b/package.json
@@ -1,1 +1,44 @@
-{"name":"hvacflow-pro","version":"1.0.0","private":true,"engines":{"node":"18.x || 20.x"},"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"eslint . --ext .ts,.tsx,.js,.jsx","prisma:generate":"prisma generate","prisma:migrate":"prisma migrate dev --name init","prepare":"husky install"},"dependencies":{"@prisma/client":"5.9.0","@supabase/supabase-js":"2.27.0","cookie":"0.6.0","dayjs":"1.11.9","dotenv":"16.1.4","langchain":"0.1.0","next":"15.0.0","react":"18.2.0","react-dom":"18.2.0","stripe":"12.14.0","tailwindcss":"4.0.0","typescript":"5.3.3","openai":"4.8.0","node-fetch":"3.4.2","resend":"0.3.0","twilio":"4.5.0","uploadthing/client":"1.0.0","uploadthing/server":"1.0.0"},"devDependencies":{"@types/node":"20.3.1","@types/react":"18.2.21","eslint":"8.46.0","husky":"8.0.3","prisma":"5.9.0","postcss":"8.4.30","autoprefixer":"10.4.14"}}
+{
+  "name": "hvacflow-pro",
+  "version": "1.0.0",
+  "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "@prisma/client": "5.9.0",
+    "@supabase/supabase-js": "2.27.0",
+    "cookie": "0.6.0",
+    "dayjs": "1.11.9",
+    "dotenv": "16.1.4",
+    "langchain": "0.1.0",
+    "next": "15.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "stripe": "12.14.0",
+    "tailwindcss": "4.0.0",
+    "typescript": "5.3.3",
+    "openai": "4.8.0",
+    "resend": "0.3.0",
+    "@uploadthing/react": "7.7.4",
+    "@uploadthing/server": "7.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.21",
+    "eslint": "8.46.0",
+    "husky": "8.0.3",
+    "prisma": "5.9.0",
+    "postcss": "8.4.30",
+    "autoprefixer": "10.4.14"
+  }
+}
